--- a/[E-09]PneumoniaDiagnose.ipynb
+++ b/[E-09]PneumoniaDiagnose.ipynb
@@ -632,7 +632,7 @@
     "## 회고\n",
     "\n",
     "* 여러가지 시도들\n",
-    "  1. BATCH_SIZE 조절   \n",
+    "  + BATCH_SIZE 조절   \n",
     "     \n",
     "     - BATCH_SIZE = 32   \n",
     "       ![image.png](attachment:image.png)   \n",
@@ -643,18 +643,18 @@
     "\n",
     "---\n",
     "\n",
-    "  2. BatchNormalization() 제거   \n",
+    "  + BatchNormalization() 제거   \n",
     "      ![image-3.png](attachment:image-3.png)   \n",
     "      처참한 결과가 나왔다.   \n",
     "      학습이 전혀 안됐다.\n",
     "---  \n",
     "  \n",
-    "  3. Dropout 제거\n",
+    "  + Dropout 제거\n",
     "      ![image-4.png](attachment:image-4.png)\n",
     "\n",
     "---\n",
     "\n",
-    "  4. 결국엔 BatchNormalization 제거랑 Dropout 제거했던건 그냥 무시하고,   \n",
+    "  + 결국엔 BatchNormalization 제거랑 Dropout 제거했던건 그냥 무시하고,   \n",
     "     BATCH_SIZE를 16으로 설정해놓고 먼저 epoch를 30번 돌린 다음에,   \n",
     "     학습이 돌아가면서 나오는 val_loss 와 val_accuracy 값들을 보면서, (특히 val_loss 값 오르락 내리락 하는 부분)    \n",
     "     적당한 epoch를 잡아서 다시 돌렸더니 최종적으로 Accuracy가 85%를 넘어가게 되었다.\n",
