--- a/[E-13]KorQuAD_BERT_Quiz.ipynb
+++ b/[E-13]KorQuAD_BERT_Quiz.ipynb
@@ -816,10 +816,7 @@
    "id": "ae0f1c0c",
    "metadata": {},
    "source": [
-    "## 0-3. 전처리 - Improve Span\n",
-    "- KorQuAd 데이터셋에는 context, question, answer가 있습니다.\n",
-    "    - context안에서 질문, 정답을 찾는 데이터 셋\n",
-    "- 전처리 과정에서 정답에 해당하는 context를 잘 찾아내야합니다."
+    "## 전처리 - Improve Span\n",
    ]
   },
   {
